--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -161,6 +161,34 @@
             color: #8696a0;
             font-size: 13px;
         }
+
+        .google-btn {
+            width: 100%;
+            padding: 14px;
+            background: #ffffff;
+            color: #3c4043;
+            border: 1px solid #d1d7db;
+            border-radius: 8px;
+            font-size: 15px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+        }
+
+        .google-btn:hover {
+            background: #f8f9fa;
+            border-color: #00a884;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .google-btn svg {
+            width: 20px;
+            height: 20px;
+        }
     </style>
 </head>
 
@@ -195,8 +223,25 @@
             <span>OR</span>
         </div>
 
+        <button class="google-btn" type="button">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
+                    fill="#4285F4" />
+                <path
+                    d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
+                    fill="#34A853" />
+                <path
+                    d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
+                    fill="#FBBC05" />
+                <path
+                    d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
+                    fill="#EA4335" />
+            </svg>
+            Continue with Google
+        </button>
         <div class="footer-text">
-            Already have an account? <a href="#">Log in</a>
+            Already have an account? <a href="login.html">Log in</a>
         </div>
     </div>
 
@@ -210,12 +255,13 @@
             signUp('http://127.0.0.1:8000/customauth/createuser/', formObject)
         });
 
+
         function signUp(route, data) {
             fetch(route, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzcwNjY5OTQwLCJpYXQiOjE3NzA2Njk2NDAsImp0aSI6IjA1NzM4MjZmY2JjZDRjZTQ4OWE1ODEzNTk2NGVjY2FjIiwidXNlcl9pZCI6IjcifQ.pLUojREjnMZU-q7qnzvytIRZsSUZVDVBfVFddBlh9t8',
+                    'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNzcwODAzODkyLCJpYXQiOjE3NzA3MTc0OTIsImp0aSI6IjQ4NTE1ODhlOGRjNTQ4ZmZiNTM0Y2UzNWU0NWY2NGM4IiwidXNlcl9pZCI6IjcifQ._nwI_qEj3tS_E5q6HxNmcSHg2--nKSjPQ3wsXndbxfI',
                 },
                 body: JSON.stringify(data),
             })
@@ -226,11 +272,16 @@
                     return response.json();
                 })
                 .then(data => {
-                    console.log('Success:', data);
+                    alert('Success:', data);
+                    window.location.href = 'http://127.0.0.1:5500/frontend/home.html';
                 })
                 .catch(error => {
                     console.error('Error:', error);
                 });
+        }
+
+        function signUpWithGoogle() {
+
         }
     </script>
 </body>
