--- a/frontend/home.html
+++ b/frontend/home.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-    <h1>Add friends to start chatting</h1>
+    <h1>Welcome <span id="showUsername"></span>, Add friends to start chatting!</h1>
+    <form id="logoutForm" method="post">
+        <button type="submit">Log out</button>
+    </form>
+    <script src="./homescript.js"></script>
 </body>
 
 </html>
